Fixed detailed view gap

--- a/src/events/components/DetailView/detail.less
+++ b/src/events/components/DetailView/detail.less
@@ -4,7 +4,7 @@
 .container {
   display: grid;
   grid-template-columns: 5fr 2fr;
-  grid-gap: 30px;
+  grid-gap: 20px;
 
   @media screen and (max-width: @owMobileBreakpoint) {
     grid-auto-flow: row;
